--- a/client/src/components/showcase/Showcase.css
+++ b/client/src/components/showcase/Showcase.css
@@ -15,3 +15,11 @@
 .tab-image {
     width: 50px;
 }
+
+.showcase-container {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+
